style: create a shared theme

--- a/src/components/bookmark/index.module.css
+++ b/src/components/bookmark/index.module.css
@@ -1,12 +1,13 @@
 .bookmark {
-    background-color: #f9f9f9;
+    background-color: var(--bookmark-color);
+
     border-radius: 50%;
     width: 60px;
     height: 60px;
 }
 
 .bookmarkActive {
-    background-color: #fbd7b24d;
+    background-color: var(--bookmarkActive-color);
 }
 
 .icon {
