--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
 
-    background: linear-gradient(90deg, rgba(52, 51, 51, 1) 0%, rgba(72, 72, 72, 1) 70%, rgba(40, 40, 40, 1) 100%);
+    background: var(--header-background-color);
 }
 
 .container {
@@ -43,6 +43,6 @@
 }
 
 .favorites > * {
-    color: white;
+    color: var(--favorites-color);
     cursor: pointer;
 }
