--- a/src/components/artworkCard/index.module.css
+++ b/src/components/artworkCard/index.module.css
@@ -1,5 +1,5 @@
 .container {
-    border: 1px solid #f0f1f1;
+    border: 1px solid var(--background-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -8,13 +8,21 @@
     margin: 0 auto;
     height: 135px;
 
-    background-color: white;
+    background-color: var(--cards-color);
     width: 100%;
+}
+
+.container > div {
+    cursor: pointer;
 }
 
 .containerWithInner {
     padding: 20px 10px;
     max-width: 100%;
+}
+
+.containerWithInner > div {
+    display: flex;
 }
 
 .container > div > img:first-child {
@@ -25,18 +33,13 @@
 }
 
 .artist {
-    color: #f17900;
+    color: var(--primary-color);
     overflow: hidden;
     max-width: 200px;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
 
-.about {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
 .h3 {
     overflow: hidden;
     max-width: 200px;
