--- a/src/components/burger-menu/index.module.css
+++ b/src/components/burger-menu/index.module.css
@@ -10,9 +10,7 @@
 
 .burgerButton {
     font-size: 24px;
-    color: #ddd;
-    background: none;
-    border: none;
+    color: var(--background-color);
     cursor: pointer;
     padding: 10px;
     z-index: 1001;
@@ -23,31 +21,15 @@
     top: 127px;
     right: 0;
     width: 250px;
-    background: #fff;
+    background: var(--background-color);
     border: 1px solid #ddd;
-    box-shadow: 0 2px 10px #39393950;
+    box-shadow: 0 2px 2px 2px 2px var(--text-color);
     padding: 20px;
     z-index: 1000;
-}
-
-.menu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.menu li {
-    margin: 10px 0;
-}
-
-.menu a {
-    text-decoration: none;
-    color: #333;
 }
 
 .link {
     display: flex;
     align-items: center;
-
     gap: 10px;
 }
