--- a/src/components/cardsLayout/index.module.css
+++ b/src/components/cardsLayout/index.module.css
@@ -1,6 +1,5 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px 10px;
     width: 100%;
     justify-content: space-between;
@@ -8,26 +7,18 @@
     margin: 50px 0;
 }
 
+.container {
+    grid-template-columns: repeat(3, 1fr);
+}
+
 @media (max-width: 1200px) {
     .container {
-        display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-gap: 10px 10px;
-        width: 100%;
-        justify-content: space-between;
-
-        margin: 50px 0;
     }
 }
 
 @media (max-width: 750px) {
     .container {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 10px 10px;
-        width: 100%;
-        justify-content: space-between;
-
-        margin: 50px 0;
+        grid-template-columns: 1fr;
     }
 }
