--- a/src/components/imgWithDescription/index.module.css
+++ b/src/components/imgWithDescription/index.module.css
@@ -1,7 +1,7 @@
 .container {
     position: relative;
     min-height: 100%;
-    padding-bottom: 60px; /* Учитываем высоту .desc */
+    padding-bottom: 60px;
 }
 
 .img {
@@ -18,6 +18,6 @@
     position: absolute;
     width: 100%;
     top: calc(100% - 150px);
-    padding: 10px;
+    padding: var(--padding);
     box-sizing: border-box;
 }
