--- a/src/components/loading/index.module.css
+++ b/src/components/loading/index.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1em;
+    gap: 10px;
     transition: 2s ease;
     cursor: progress;
 
@@ -11,12 +11,12 @@
     padding: 5px 10px;
 }
 .message {
-    font-weight: 600;
+    font-weight: var(--font-weight-bold);
 }
 .dot {
-    background: #393939;
-    height: 0.65em;
-    width: 0.65em;
+    background: var(--text-color);
+    height: 10px;
+    width: 10px;
     border-radius: 50%;
     animation: move 0.6s ease infinite;
 }
