--- a/src/pages/artwork/index.module.css
+++ b/src/pages/artwork/index.module.css
@@ -2,13 +2,19 @@
     display: flex;
     width: 100%;
     margin: auto;
-    padding: 15px;
+    padding: var(--padding);
 }
 
 .img_container {
+    position: relative;
     min-width: 500px;
     height: 570px;
-    position: relative;
+}
+
+.img_container img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 @media (max-width: 960px) {
@@ -32,7 +38,7 @@
     }
 
     .article {
-        padding: 10px 0px !important;
+        padding: 10px 0 !important;
     }
 }
 
@@ -47,12 +53,12 @@
 
 .highlight,
 .artist_title {
-    color: #f17900;
+    color: var(--primary-color);
 }
 
 .artist_title {
-    font-size: 20px;
-    font-weight: 500 !important;
+    font-size: var(--font-size-small);
+    font-weight: var(--font-weight-bold) !important;
 }
 
 .bookmark {
@@ -60,12 +66,6 @@
     top: 0;
     right: 0;
     padding: 10px;
-}
-
-.img_container img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
 }
 
 .article {
@@ -77,7 +77,7 @@
 }
 
 .bold * {
-    font-weight: 600;
+    font-weight: var(--font-weight-bold);
 }
 
 .overview h1 {
@@ -86,5 +86,5 @@
 
 .overview p {
     line-height: 25px;
-    font-weight: 600;
+    font-weight: var(--font-weight-bold);
 }
