--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -1,40 +1,39 @@
 .title {
-    font-weight: 700;
-    font-size: 64px;
+    font-weight: var(--font-weight-bold);
+    font-size: var(--font-size-large);
     text-align: center;
-    margin: 120px 0 70px 0;
+    margin: var(--margin-large) 0 var(--margin-medium) 0;
 }
 
 @media (max-width: 768px) {
     .title {
-        font-size: 50px;
+        font-size: var(--font-size-medium);
     }
 }
 
 .secondTitle {
     text-align: center;
-    margin: 120px 0 0px 0;
-    text-align: center;
+    margin: var(--margin-large) 0 0;
 }
 
 .secondTitle span:first-child {
-    color: #f17900;
-    font-size: 16px;
+    color: var(--primary-color);
+    font-size: var(--font-size-small);
 }
 
 .secondTitle span:last-child {
-    font-size: 32px;
+    font-size: var(--font-size-default);
 }
 
 .highlight {
-    color: #f17900;
-    font-weight: bold;
+    color: var(--primary-color);
+    font-weight: var(--font-weight-bold);
 }
 
 .here {
     display: block;
     text-align: center;
-    font-weight: bold;
+    font-weight: var(--font-weight-bold);
 }
 
 .pagination {
