chore: add path alias configuration

--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -23,6 +23,7 @@
 
 .secondTitle span:last-child {
     font-size: var(--font-size-default);
+    font-weight: var(--font-weight-bold);
 }
 
 .highlight {
